2010-06-14  Deepak Bhole <dbhole@redhat.com>

	* plugin/icedteanp/IcedTeaJavaRequestProcessor.cc: Use variadic macro
	for debug message printing.
	* plugin/icedteanp/IcedTeaJavaRequestProcessor.h: Same.
	* plugin/icedteanp/IcedTeaNPPlugin.cc: Same.
	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc: Same.
	* plugin/icedteanp/IcedTeaPluginUtils.cc: Same.
	* plugin/icedteanp/IcedTeaPluginUtils.h: Same.
	* plugin/icedteanp/IcedTeaScriptablePluginObject.cc: Same.

2010-07-12 Jon VanAlten <jon.vanalten@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioDataLine.java
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioLine.java
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLine.java
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioTargetDataLine.java:
	Eliminate spurious exception throwing from open, close, read, write,
	drain, and flush calls on closed lines.
	Use isOpen() API call instead of instance variable where appropriate.

2010-07-08  Man Lung Wong  <mwong@redhat.com>

    * netx/net/sourceforge/jnlp/Parser.java:
    (getRootNode): Used BufferedInputStream instead of InputStream to
	have mark and reset method available. Passed the encoding to the
	constructor of InputStreamReader, such that the stream will now
	be parsed with the encoding the jnlp file is in.
    (getEncoding): A new method which checks the first four bytes of input
	and determines what the files encoding is.

2010-07-08  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(rebuild): Add new target to allow a quick
	rebuild of OpenJDK in the manner of the existing
	hotspot target.

2010-07-08  Omair Majid  <omajid@redhat.com>

	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java:
	(reFrame): Pass the panel to the constructor, dont set it yourself.
	(PluginAppletViewer): Set the panel to be the passed in object and only
	then add it to the list of all panels.
